feat: update libcommons-cli-java to 1.6.0
Command line arguments and options parsing library

Issue: https://github.com/deepin-community/sig-deepin-sysdev-team/issues/547
Log: update repo